minor alignment corrections

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ div.right-center {
   max-width:45%;
   max-height:45%;
   bottom:15%;
-  right:10%;
+  right:3%;
   overflow:visible;
 }
 
